# iran-stock-mlops

./: .gitignore  Dockerfile  Makefile  Report.tex  docker-compose.yaml  docker-compose.yml  hadoop.env  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
airflow/: Dockerfile  requirements.txt
airflow/dags/: stock_pipeline.py
api/: Dockerfile  inference.py  main.py  requirements.txt  schemas.py
config/: airflow.cfg  prometheus.yml
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/dashboards/json/: executive_mlops_dashboard.json
config/pgadmin/: servers.json
dags/: 01_binance_to_lakehouse.py  03_automated_retraining_and_drift.py  ETHUSDT.py  dag1.py  dag2.py  dag3.py  stock-exchange-v0.py  stock-exchange-v1.py  stock-exchange-v2.py  stock-exchange-v3.py  stock-exchange-v4.py  stock-exchange-v5.py  stock-exchange-v6.py  stock-exchange-v7.py
docker/: Dockerfile
model/: eth_drift_detector.py  eth_predict.py  eth_price_model-v1.py  eth_price_model-v2.py  eth_price_model-v3.py  eth_price_model_v4.py
model/eth_model_artifacts/: model_pruned.pkl  pipeline_meta.json  quantile_transformer.pkl
notebooks/: analysis.ipynb
pipeline/: Dockerfile  evaluate.py  features.py  ingest.py  preprocess.py  train.py
reports/W3/: ChallangeReport.tex  Week3_Study_Report.tex
scripts/: cmd.txt  hive.hql  init-db.sh  variables.json
src/data_engine/: clickhouse_manager.py  extractors.py  extractort.py  lakehouse.py  validator.py  validators.py
src/features/: feast_definitions.py  quantitative.py  quantitive.py
src/ml/: drift.py  models.py  registry.py
tests/: conftest.py  test_api.py  test_api_endpoints.py  test_dag_integrity.py  test_drift.py  test_features.py  test_model.py  test_schemas.py
