[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iran-stock-mlops"
version = "2.0.0"
description = "Production-grade Lakehouse DataOps & MLOps Quantitative Platform for ETH/USDT and Macro Financial Indicators"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Senior DataOps Architecture Team", email = "dataops@platform.ai" }
]
keywords = ["dataops", "mlops", "airflow", "lakehouse", "duckdb", "polars", "fastapi", "mlflow", "quantitative"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.2.3",
    "numpy>=1.26.0",
    "pyarrow>=17.0.0",
    "duckdb>=1.1.0",
    "polars>=1.8.0",
    "pydantic>=2.8.0",
    "s3fs>=2024.6.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "mlflow>=2.13.0",
    "optuna>=3.6.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.9",
    "requests>=2.32.0",
    "pendulum>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
pythonpath = [".", "src", "api"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
